--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Discord bot token (from Discord Developer Portal)
 DISCORD_TOKEN=your_discord_bot_token_here
 
-# (Optional) Guild ID for testing commands in a specific server
+# Discord Guild ID
 DISCORD_GUILD=your_guild_id_here
 
-# (Optional) Channel ID if you want to restrict message sending
+# Discord Channel ID
 DISCORD_CHANNEL=your_channel_id_here
 
 # Base URL of the FastAPI backend
